# Textbook-Divider

./: .coverage  .gitignore  CMakeLists.txt  LICENSE  README.md  STATUS_AND_ROADMAP.md  imgui.ini  main.cpp  requirements.txt  run_processor.py  setup.py
.env/: pyvenv.cfg
cmake/: FindPoDoFo.cmake
data/input/: OMR
data/output/: README.md
docs/: AUDIVERIS_INTEGRATION.md  IMPROVEMENT_PLAN.md  OMR_TEST_PLAN.md  README.md  SRS.md  TEST_INVESTIGATION.md  TEST_PLAN.md  TEST_WORKFLOW.md
docs/development/: DIAGRAM_DETECTION_PLAN.md  OCR_IMPROVEMENT_PLAN.md
docs/testing/: TEST_IMPLEMENTATION.md  TEST_PLAN.md
graph_extractor/: __init__.py  diagram_parser.py  geometric_parser.py  graph_analyzer.py  graph_comparator.py  graph_exporter.py  graph_layout.py  graph_metrics.py  graph_optimizer.py  graph_query.py  graph_serializer.py  graph_transformer.py  graph_types.py  graph_validator.py  graph_visualizer.py  math_parser.py  music_graph_exporter.py  music_theory_parser.py  pattern_detector.py.bak  pattern_detector.py.bak2  pattern_detector.py.bak3  pattern_detector.py.bak4  pattern_detector.py.tmp  tree_parser.py
graph_extractor/tests/: test_basic_graph.py  test_complex_transformations.py  test_pattern_detector.py  test_transformation_layout.py  test_transformation_networks.py
scripts/: build_audiveris.sh
src/: ChapterCache.cpp  ChapterCache.h  ChapterDetector.cpp  ChapterDetector.h  FileHandler.cpp  FileHandler.h  OCRWrapper.cpp  OCRWrapper.h  OMRWrapper.cpp  OMRWrapper.h  TextProcessor.cpp  TextProcessor.cpp.bak2  TextProcessor.h  TextProcessor_temp.cpp
src/gui/: GuiApp.cpp  GuiApp.h  main_gui.cpp
src/textbook_divider/: __init__.py  chapter_detector.py  create_templates.py  file_handler.py  graph_extractor.py  gui.py  main.py  ocr_confidence.py  ocr_processor.py  ocr_processor.py.bak  ocr_processor_new.py  ocr_processor_temp.py  omr_processor.py  omr_processor.py.bak  parallel_processor.py  plugin_system.py  processor.py  processor.py.new  processor.py.tmp  test_ocr.py  test_omr.py  text_processor.py
src/textbook_divider/plugins/: ocr_plugin.py  omr_plugin.py  plugin_config.json
tests/: README.md  create_sample_pdf.cpp  requirements.txt  run_all_tests.sh  run_book_tests.sh  run_omr_suite.sh  run_tests.sh  test_advanced_omr.py  test_config.json  test_graph_extractor.py  test_lewin_graphs.py  test_lewin_networks.py  test_lewin_transformations.py  test_text_processor.cpp
tests/.env/: pyvenv.cfg
tests/core/: __init__.py  test_basic.py  test_chapter_detection.py  test_improvements.py  test_plugin_system.py  test_textbook_divider.py  test_utils.py
tests/core/sample_books/: complex_sample.txt  sample.txt
tests/data/expected/: page_15.txt
tests/metrics/: test_chapter_structure_metrics.json  test_complex_figures_metrics.json  test_exercise_detection_metrics.json  test_formula_detection_metrics.json  test_mathematical_notation_metrics.json  test_musical_notation_metrics.json  test_notation_detection_metrics.json  test_table_detection_metrics.json  test_technical_diagrams_metrics.json  test_text_extraction_fallback_metrics.json
tests/ocr/: test_ocr.py  test_ocr_improvements.py  test_ocr_performance.py  test_ocr_quality.py
tests/omr/: run_omr_tests.py  test_omr.py  test_omr_detection.py  test_omr_integration.py  test_omr_notation.py  test_omr_performance.py  test_omr_quality.py
tests/performance/: evaluate_accuracy.py  network_analysis_benchmarks.py  run_benchmarks.py  test_performance.py
tests/phase_3_5/: README.md  requirements.txt  run_tests.sh  test_lewin_complex_pages.py  test_lewin_multi_column.py  test_music_theory_books.py  test_ocr_page42.py  test_schoenberg_full_book.py  test_schoenberg_multi_page.py  test_schoenberg_page42.py  test_schoenberg_page42_new.py  test_schoenberg_page42_updated.py  test_schoenberg_page42_v2.py
tests/reports/: omr_test_report_20250130_172142.json  omr_test_report_20250130_173521.json  test_report_20250130_092049.json  test_report_20250130_092056.json  test_report_20250130_092215.json  test_report_20250130_092223.json  test_report_20250130_092343.json  test_report_20250130_092535.json  test_report_20250130_092639.json  test_report_20250130_092824.json
tests/sample_books/: complex_sample.txt  generate_test_samples.py  test.txt
tests/scripts/: __init__.py  debug_pdf.py  test_books.py  test_pdf.py  test_real_books.py
tests/utils/: analyze_pdf.py  analyze_pdf_content.py  analyze_single_pdf.py  compare_results.py  create_test_pdf.py  create_test_pdfs.py  create_test_score.py  generate_test_images.py  test_runner.py
(+431 files in other folders)
